<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sweet_dialog_bg_color">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="end"
        android:orientation="vertical"
        tools:showIn="@layout/activity_search">


        <!--<com.toptoche.searchablespinnerlibrary.SearchableSpinner-->
        <!--android:id="@+id/searchableSpinner_city"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="@dimen/textViewFormHeight"-->
        <!--android:layout_marginEnd="@dimen/layoutMarginStartEndInSearchForm"-->
        <!--android:layout_marginStart="@dimen/layoutMarginStartEndInSearchForm"-->
        <!--android:layout_marginTop="@dimen/searchTopMarginBetweenViews"-->
        <!--android:entries="@array/citiesArray" />-->

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/layoutMarginStartEndInSearchForm"
            android:layout_marginStart="@dimen/layoutMarginStartEndInSearchForm"
            android:layout_marginTop="@dimen/formLinearLayoutmargin"
            android:gravity="end|center_vertical"
            android:orientation="horizontal"
            android:weightSum="100"

            >


            <RelativeLayout
                android:id="@+id/et_city_in_search"
                android:layout_width="0dp"
                android:layout_height="@dimen/addApartmentInputHeght"
                android:layout_weight="70"
                android:background="@drawable/spinner_border"
                android:gravity="center_vertical"

                >

                <TextView
                    android:id="@+id/city_tv_in_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/spi"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:text="اختار المدينة"
                    android:textColor="@android:color/black" />

                <ImageView
                    android:id="@+id/spi"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_vertical|right"
                    android:src="@drawable/spinner_bg" />

            </RelativeLayout>


            <TextView
                android:id="@+id/textView_city_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"

                android:text="@string/city" />


        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/layoutMarginStartEndInSearchForm"
            android:layout_marginStart="@dimen/layoutMarginStartEndInSearchForm"
            android:layout_marginTop="@dimen/formLinearLayoutmargin"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="100"

            >

            <RelativeLayout
                android:id="@+id/et_gender_in_search"
                android:layout_width="0dp"
                android:layout_height="@dimen/addApartmentInputHeght"
                android:layout_weight="70"
                android:background="@drawable/spinner_border"
                android:gravity="center_vertical"

                >

                <Spinner
                    android:id="@+id/gender_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_toLeftOf="@+id/spi3"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:spinnerMode="dropdown" />

                <ImageView
                    android:id="@+id/spi3"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/spinner_bg" />

            </RelativeLayout>


            <TextView
                android:id="@+id/textView_gender_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/gender" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/layoutMarginStartEndInSearchForm"
            android:layout_marginStart="@dimen/layoutMarginStartEndInSearchForm"
            android:layout_marginTop="@dimen/searchTopMarginBetweenViews"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/priceFrom"

                />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/textView_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="0" />


                <TextView
                    android:id="@+id/textView_to"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="10000" />

            </RelativeLayout>


            <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
                android:id="@+id/rangeSeekbar_price"
                _thumb_color="@color/bg_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textViewFormHeight"
                android:layout_marginTop="10dp"
                app:bar_color="@color/colorPrimary"
                app:bar_highlight_color="@color/colorPrimaryDark"
                app:left_thumb_color="@color/bishoy"
                app:max_value="@integer/price_max_value"
                app:min_value="@integer/price_min_value"
                app:right_thumb_color="@color/bishoy"
                app:steps="100" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/layoutMarginStartEndInSearchForm"
            android:layout_marginStart="@dimen/layoutMarginStartEndInSearchForm"
            android:layout_marginTop="@dimen/formLinearLayoutmargin"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:weightSum="100">


            <RelativeLayout
                android:id="@+id/ET_numOfRooms"
                android:layout_width="0dp"
                android:layout_height="@dimen/addApartmentInputHeght"
                android:layout_weight="70"
                android:background="@drawable/spinner_border"
                android:gravity="center_vertical"

                >

                <TextView
                    android:id="@+id/numOfRooms_tv_in_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toLeftOf="@+id/spi2"
                    android:background="@android:color/transparent"
                    android:gravity="center_vertical"
                    android:textColor="@color/black" />

                <ImageView
                    android:id="@+id/spi2"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center_vertical|right"
                    android:src="@drawable/spinner_bg" />

            </RelativeLayout>


            <TextView
                android:id="@+id/textView_numOfrooms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"

                android:text="@string/numOfRooms" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/layoutMarginStartEndInSearchForm"
            android:layout_marginStart="@dimen/layoutMarginStartEndInSearchForm"
            android:layout_marginTop="@dimen/formLinearLayoutmargin"
            android:layout_weight="100"
            android:gravity="end"
            android:orientation="horizontal"
            android:visibility="gone">

            <EditText
                android:id="@+id/ET_numOfBeds"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:inputType="none"
                android:longClickable="false" />

            <TextView
                android:id="@+id/textView_numOfBeds"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"

                android:text="@string/numOfBeds" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/layoutMarginStartEndInSearchForm"
            android:layout_marginStart="@dimen/layoutMarginStartEndInSearchForm"
            android:layout_marginTop="@dimen/formLinearLayoutmargin"
            android:gravity="end"
            android:orientation="horizontal"

            android:visibility="gone"
            android:weightSum="100">

            <EditText
                android:id="@+id/ET_numOfBathRooms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:inputType="none"
                android:longClickable="false" />

            <TextView
                android:id="@+id/textView_numOfBathrooms"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/numOfBathRoom" />


        </LinearLayout>
    </LinearLayout>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/button_add_apartment_blue"
        android:text="@string/search"
        android:textColor="@color/white" />


    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adViewSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/btn_search"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_search_footer"></com.google.android.gms.ads.AdView>

</RelativeLayout>
